--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
    
 <div class="row"> 
   <div class="column">
-    <img src="Photos-001/run.jpg" alt="decribe the image HERE for accessibility purposes">
+    <img src="Photos-001/run.JPG" alt="decribe the image HERE for accessibility purposes">
     <img src="Photos-001/gworls.JPG" alt="decribe the image HERE for accessibility purposes">
   </div>
   <div class="column">
     <img src="Photos-001/sunny.jpeg" alt="decribe the image HERE for accessibility purposes">
-    <img src="Photos-001/snowboard.jpg" alt="decribe the image HERE for accessibility purposes">
+    <img src="Photos-001/snowboard.JPG" alt="decribe the image HERE for accessibility purposes">
   </div>
   <div class="column">    
-    <img src="Photos-001/swest.jpg" alt="decribe the image HERE for accessibility purposes">
+    <img src="Photos-001/swest.JPG" alt="decribe the image HERE for accessibility purposes">
     <img src="Photos-001/hack.jpg" alt="decribe the image HERE for accessibility purposes">
   </div>
 </div>
@@ -92,7 +92,7 @@
           <img src="Photos-001/mountain.jpg" alt="decribe the image HERE for accessibility purposes">
         </div>
         <div class="column">    
-          <img src="Photos-001/concert.jpg" alt="decribe the image HERE for accessibility purposes">
+          <img src="Photos-001/concert.JPG" alt="decribe the image HERE for accessibility purposes">
           <img src="Photos-001/lake.jpg" alt="decribe the image HERE for accessibility purposes">
         </div>
       </div>
